<resources>
    <string name="app_name">BizTech Bytes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_with_google">Login with Google</string>
    <string name="business_and_technology_news">Business and Technology News</string>
    <string name="welcome">WELCOME</string>
    <string name="description_placeholder">description</string>
    <string name="headline_placeholder">headline</string>
    <string name="swipe_left_to_read_more">Swipe left to read more</string>
    <string name="head_placeholder">head</string>
    <string name="tap_here_to_read_more">Tap here to read more</string>
    <string name="news_image">News Image</string>
    <string name="click_for_more_details">Click for more details</string>
    <string name="default_web_client_id">55530752431-027re7e13tpgjsb9jhuiq7k43u9vu9vg.apps.googleusercontent.com</string>
</resources>