<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="500dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="285dp"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"
                android:contentDescription="@string/news_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/headline"
                android:padding="2dp"
                android:text="@string/headline_placeholder"
                android:textSize="20sp"
                android:layout_margin="20dp"/>

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textSize="15sp"
                android:text="@string/description_placeholder"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/swipetext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/swipe_left_to_read_more"
                android:textSize="11sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>


        </LinearLayout>



        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"
                android:contentDescription="@string/click_for_more_details" />

            <!-- Semi-transparent black overlay -->
            <View
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#80000000" />
        </FrameLayout>

        <TextView
            android:layout_gravity="bottom"
            android:id="@+id/head"
            android:padding="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/head_placeholder"
            android:textSize="15sp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="35dp"/>
        <TextView
            android:layout_gravity="bottom"
            android:id="@+id/tapHere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textColor="@android:color/white"
            android:text="@string/tap_here_to_read_more"
            android:textSize="11sp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>


    </androidx.cardview.widget.CardView>

</LinearLayout>